objects/OUV_Vehicle__c.object
<CustomObject>
    <label>OUV Vehicle</label>
    <nameField>
        <label>OUV Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OUV Vehicles</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>OUV_Age__c</fullName>
        <formula>IF( ISPICKVAL(OUV_VehicleMasterStatus__c, &quot;Handed In&quot;) || (ISPICKVAL(OUV_VehicleMasterStatus__c, &quot;Unavailable&quot;) &amp;&amp; ISPICKVAL( OUV_VehicleSubStatus__c , &quot;Sold&quot;))  , 
IF(
   ISNULL(OUV_NewRequestedHandedInDate__c), 
   MONTH(TODAY()) - MONTH(OUV_HandinDate__c),
   IF(
      ISPICKVAL(OUV_NewRequestedHandedInDateStatus__c ,&apos;Approved&apos;),
      MONTH(TODAY()) - MONTH(OUV_NewRequestedHandedInDate__c),
      NULL
     )
  ),
NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_RIS__c</fullName>
        <label>Outstanding RIS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emissions__c</fullName>
        <label>Emissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Brand__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_JLRBrand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fleet</label>
        <referenceTo>OUV_Fleet__c</referenceTo>
        <relationshipLabel>OUV Vehicles</relationshipLabel>
        <relationshipName>OUV_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Driver__c</fullName>
        <inlineHelpText>The JLR CDSID of the person requesting, using or who is responsible for the vehicle whilst on loan.</inlineHelpText>
        <label>Internal JLR Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Option__c</fullName>
        <label>Option</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Region__c</fullName>
        <formula>CASE(OUV_market_location__c,
&quot;Austria&quot;,&quot;Europe&quot;,
&quot;Belgium&quot;,&quot;Europe&quot;,
&quot;France&quot;,&quot;Europe&quot;,
&quot;Italy&quot;,&quot;Europe&quot;,
&quot;Germany&quot;,&quot;Europe&quot;,
&quot;Netherlands&quot;,&quot;Europe&quot;,
&quot;Spain&quot;,&quot;Europe&quot;,
&quot;Portugal&quot;,&quot;Europe&quot;,
&quot;Australia&quot;,&quot;Overseas&quot;,
&quot;Brazil&quot;,&quot;Overseas&quot;,
&quot;Colombia&quot;,&quot;Overseas&quot;,
&quot;India&quot;,&quot;Overseas&quot;,
&quot;Japan&quot;,&quot;Overseas&quot;,
&quot;MENA&quot;,&quot;Overseas&quot;,
&quot;Mexico&quot;,&quot;Overseas&quot;,
&quot;Russia&quot;,&quot;Overseas&quot;,
&quot;Singapore&quot;,&quot;Overseas&quot;,
&quot;South Africa&quot;,&quot;Overseas&quot;,
&quot;South Korea&quot;,&quot;Overseas&quot;,
&quot;Taiwan&quot;,&quot;Overseas&quot;,
&quot;United Kingdom&quot;,&quot;UK&quot;,
&quot;Canada&quot;,&quot;North America&quot;,
&quot;US&quot;,&quot;North America&quot;,
&quot;China&quot;,&quot;China&quot;,
&quot;USA&quot;,&quot;North America&quot;,&quot;&quot;
)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_SoldTo__c</fullName>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager/Employee</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Direct/Auction/Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Booked Pending Approval</fullName>
                </value>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>In Preparation</fullName>
                </value>
                <value>
                    <fullName>Write-Off</fullName>
                </value>
                <value>
                    <fullName>Handed In Awaiting Rework</fullName>
                </value>
                <value>
                    <fullName>Handed In Ready for Sale</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Account__c</fullName>
        <formula>OUV_Fleet__r.OUV_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_CI_Code__c</fullName>
        <formula>RIGHT(OUV_VistaVehicle__r.OUV_Partner_Code__c, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Freight__c</fullName>
        <description>Linked to SAP</description>
        <label>Labour &amp; Overhead</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_FullVIN__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Full_Vin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Market1__c</fullName>
        <formula>CASE( OUV_VistaVehicle__r.OUV_Market_Code__c,
&quot;IE&quot;,&quot;MENA&quot;,
&quot;KC&quot;,&quot;MENA&quot;,
&quot;AD&quot;,&quot;MENA&quot;,
&quot;MS&quot;,&quot;MENA&quot;,
&quot;SD&quot;,&quot;MENA&quot;,
&quot;BB&quot;,&quot;MENA&quot;,
&quot;YA&quot;,&quot;MENA&quot;,
&quot;PA&quot;,&quot;MENA&quot;,
&quot;GR&quot;,&quot;MENA&quot;,
&quot;PL&quot;,&quot;MENA&quot;,
&quot;DU&quot;,&quot;MENA&quot;,
&quot;LY&quot;,&quot;MENA&quot;,
&quot;SR&quot;,&quot;MENA&quot;,
&quot;EB&quot;,&quot;MENA&quot;,
&quot;LB&quot;,&quot;MENA&quot;,
&quot;AU&quot;,&quot;MENA&quot;,
&quot;IF&quot;,&quot;MENA&quot;,
&quot;QA&quot;,&quot;MENA&quot;,
&quot;MJ&quot;,&quot;MENA&quot;,
&quot;AZ&quot;,&quot;MENA&quot;,
&quot;JC&quot;,&quot;MENA&quot;,
&quot;TF&quot;,&quot;MENA&quot;,
&quot;EM&quot;,&quot;MENA&quot;,
&quot;SC&quot;,&quot;MENA&quot;,
&quot;JB&quot;,&quot;Japan&quot;,
&quot;MH&quot;,&quot;Mexico&quot;,
&quot;PH&quot;,&quot;Portugal&quot;,
&quot;IJ&quot;,&quot;Italy&quot;,
&quot;UB&quot;,&quot;United Kingdom&quot;,
&quot;NB&quot;,&quot;Netherlands&quot;,
&quot;BH&quot;,&quot;Brazil&quot;,
&quot;AK&quot;,&quot;Austria&quot;,
&quot;FF&quot;,&quot;France&quot;,
&quot;US&quot;,&quot;USA&quot;,
&quot;KB&quot;,&quot;South Korea&quot;,
&quot;CJ&quot;,&quot;Colombia&quot;,
&quot;DE&quot;,&quot;Germany&quot;,
&quot;IT&quot;,&quot;Italy&quot;,
&quot;CB&quot;,&quot;Canada&quot;,
&quot;ES&quot;,&quot;Spain&quot;,
&quot;CO&quot;,&quot;China&quot;,
&quot;AJ&quot;,&quot;Australia&quot;,
&quot;MT&quot;,&quot;Singapore&quot;,
&quot;CH&quot;,&quot;China&quot;,
&quot;UR&quot;,&quot;Russia&quot;,
&quot;SK&quot;,&quot;Spain&quot;,
&quot;IC&quot;,&quot;India&quot;,
&quot;SH&quot;,&quot;South Africa&quot;,
&quot;TB&quot;,&quot;Taiwan&quot;,
&quot;BD&quot;,&quot;Belgium&quot;,&quot;&quot;)</formula>
        <label>Market Specification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Presold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Pre-sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_tax__c</fullName>
        <label>Vehicle tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_Fleet__c</fullName>
        <label>Last Fleet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Rate__c</fullName>
        <label>Monthly Rate</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Currency__c</fullName>
        <description>Linked to SAP</description>
        <label>Currency</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Full_Vin__c</fullName>
        <label>Full Vin</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ShortVIN__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Short_VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_TrimCode__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Trim_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trim Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_WriteOff__c</fullName>
        <label>Disposal Change Request Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fleet_formula__c</fullName>
        <formula>OUV_Fleet__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ATONumber__c</fullName>
        <inlineHelpText>To navigate to the ATO search for the ATO number using the global search functionality or click into the Vista Vehicle attached to the OUV Vehicle and then click on the ATO request line item, select the vehicle line item and navigate to the ATO.</inlineHelpText>
        <label>ATO Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_BuildDate__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Build_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Fuel_Type__c</fullName>
        <label>Fuel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Diesel</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Petrol</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Insurance__c</fullName>
        <description>Linked to SAP</description>
        <label>Insurance Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ModelCode__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Vehicle_Model_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_PaintCode__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Paint_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paint Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_TaskOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will have id of the user who has requested registration of ouv vehicle.</description>
        <label>Task Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_BuildPhase__c</fullName>
        <label>Build Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume</fullName>
                    <default>true</default>
                    <label>Volume</label>
                </value>
                <value>
                    <fullName>TT1</fullName>
                </value>
                <value>
                    <fullName>TT2</fullName>
                </value>
                <value>
                    <fullName>TT3</fullName>
                </value>
                <value>
                    <fullName>PP1</fullName>
                </value>
                <value>
                    <fullName>PP2</fullName>
                </value>
                <value>
                    <fullName>PP3</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_CostCentre__c</fullName>
        <label>Cost Centre</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_HandinDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Expected Hand In Date is the hand in date set at the point of go live</inlineHelpText>
        <label>Expected Hand In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_MarketCode__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Market_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_SalesPrice__c</fullName>
        <label>Sales Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_StatusCode__c</fullName>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>145</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>155</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
                <value>
                    <fullName>165</fullName>
                </value>
                <value>
                    <fullName>175</fullName>
                </value>
                <value>
                    <fullName>190</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>205</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presold_Yes_No__c</fullName>
        <formula>IF(OUV_Presold__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presold Yes No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Company__c</fullName>
        <label>Rental Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Cost_Centre__c</fullName>
        <formula>OUV_Fleet__r.OUV_Cost_Centre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Centre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_LocalOption__c</fullName>
        <label>Local Option</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_RetailPrice__c</fullName>
        <description>Linked to SAP</description>
        <inlineHelpText>From SAP or Vista</inlineHelpText>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_ReworkRoute__c</fullName>
        <label>Rework Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_StatusCode1__c</fullName>
        <formula>TEXT(OUV_VistaVehicle__r.OUV_Status_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Code1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleAge1__c</fullName>
        <description>For Search for OUV vehicle</description>
        <formula>(YEAR(OUV_HandinDate__c)*12+
 MONTH(OUV_HandinDate__c))- (YEAR(Today())*12+ MONTH(Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_CarCondition__c</fullName>
        <label>Vehicle Condition</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_DeliveryDate__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Hand_In_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to send Task Notification for Owner Change</description>
        <label>Hand In Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_LL4_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Approver (LL4)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles_LL4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_LL6_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver (LL6)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles_LL6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_License_Type__c</fullName>
        <inlineHelpText>For Tax purposes</inlineHelpText>
        <label>Licence/Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Importer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_LossOnResale__c</fullName>
        <formula>ABS(OUV_ResidualValue__c -  OUV_RetailPrice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loss On Resale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_Manufacturer__c</fullName>
        <formula>TEXT(OUV_VistaVehicle__r.Manufacturer__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_MarketHidden__c</fullName>
        <label>Market Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Monthly_Rate__c</fullName>
        <label>Monthly Rate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_Payment_Type__c</fullName>
        <label>Payment Type / Scheme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jobcar Logbook</fullName>
                </value>
                <value>
                    <fullName>Jobcar with Mileage</fullName>
                </value>
                <value>
                    <fullName>Jobcar without Mileage</fullName>
                </value>
                <value>
                    <fullName>Lease car</fullName>
                </value>
                <value>
                    <fullName>Job Assigned</fullName>
                </value>
                <value>
                    <fullName>Senior Job Assigned</fullName>
                </value>
                <value>
                    <fullName>MLAP</fullName>
                </value>
                <value>
                    <fullName>SMLAP</fullName>
                </value>
                <value>
                    <fullName>ECCP</fullName>
                </value>
                <value>
                    <fullName>SECCP</fullName>
                </value>
                <value>
                    <fullName>RMLAP</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Registration__c</fullName>
        <label>Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_SalesChannel__c</fullName>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager/Employee/Private</fullName>
                </value>
                <value>
                    <fullName>RETAILER</fullName>
                </value>
                <value>
                    <fullName>Direct/Auction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_VariantPrice__c</fullName>
        <description>Linked to SAP</description>
        <label>Variant Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleNotes__c</fullName>
        <label>Vehicle Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_VistaVehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vista Vehicle</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>OUV Vehicles</relationshipLabel>
        <relationshipName>OUV_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disclosure_Amount__c</fullName>
        <label>Disclosure Amount</label>
        <summarizedField>OUV_Damage_Disclosure__c.Repair_Cost__c</summarizedField>
        <summaryForeignKey>OUV_Damage_Disclosure__c.OUV_Vehicle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OUV_DisposalRoute__c</fullName>
        <label>Disposal Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Disposal_Date__c</fullName>
        <description>The date the Master Status was set to Disposed</description>
        <label>Disposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_EffectiveDate__c</fullName>
        <label>OUV Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Justification__c</fullName>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_MaterialCosts__c</fullName>
        <description>Linked to SAP</description>
        <label>Material Costs</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_ResidualValue__c</fullName>
        <formula>OUV_RetailPrice__c *  OUV_ResidualValuePercent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated Residual value based on Residual value %</inlineHelpText>
        <label>Residual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_ReturnToStock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return To Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_SalePriceDate__c</fullName>
        <label>Date of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_TransferPrice__c</fullName>
        <description>Linked to SAP</description>
        <label>Transfer Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleStatus__c</fullName>
        <label>Registration Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_User_City__c</fullName>
        <label>Vehicle User - City</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_ATORequestType__c</fullName>
        <label>ATO Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_AddToFleetDate__c</fullName>
        <label>Actual Add To Fleet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_InventoryValue__c</fullName>
        <description>Linked to SAP</description>
        <label>Inventory Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Is_Checked_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Checked-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_RoadTaxValidTo__c</fullName>
        <label>Road Tax Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleAgeDays__c</fullName>
        <description>Post Hand-in Date</description>
        <formula>10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleMileage__c</fullName>
        <label>Vehicle Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Driver__c</fullName>
        <description>Driver of the Vehicle</description>
        <inlineHelpText>This is an encrypted field. Add the driver details here. This field is not visible to all users.</inlineHelpText>
        <label>Vehicle User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_User_State__c</fullName>
        <label>Vehicle User – State</label>
        <length>2</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Distance_to_Home_km__c</fullName>
        <label>Distance to Home, km</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_ATOLineItemName__c</fullName>
        <label>ATO Line Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_FinalSalesPrice__c</fullName>
        <label>Final Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_HandInFYQuarter__c</fullName>
        <description>Not a formula field to enable SOQL grouping. Set by same trigger that calculates the FY field.</description>
        <label>HandInFYQuarter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_HandedInQuarter__c</fullName>
        <formula>IF((MONTH(OUV_HandinDate__c )&gt;=1 &amp;&amp; MONTH(OUV_HandinDate__c )&lt;=3),&apos;Q4&apos;,
IF((MONTH(OUV_HandinDate__c )&gt;=4 &amp;&amp; MONTH(OUV_HandinDate__c )&lt;=6),&apos;Q1&apos;,
IF((MONTH(OUV_HandinDate__c )&gt;=7 &amp;&amp; MONTH(OUV_HandinDate__c )&lt;=9),&apos;Q2&apos;,
IF((MONTH(OUV_HandinDate__c )&gt;=10 &amp;&amp; MONTH(OUV_HandinDate__c )&lt;=12),&apos;Q3&apos;,&apos;NA&apos;)  )  )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hand In Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_IdentitySticker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sticker used to visually identify an OUV placed inside vehicle windscreen</inlineHelpText>
        <label>Identity Sticker Placed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>